# ioai_temporal

./: .gitignore  readme.md
prototypes/detection_a/: data  pyproject.toml
prototypes/detection_a/dataset/: handling.py  make.py  reorgan.py  run  structure.py
prototypes/detection_a/detection/: coco_eval.py  coco_utils.py  data.py  main.py  model.py  predictor.py  run  test.py  trainer.py  transforms.py  utils.py  viewer  viewer.py
prototypes/detection_a/detection/proto/: run  sample.py
prototypes/detection_a/detection/rafael_evaluator/: BoundingBoxes.py  Evaluator.py  utils.py
prototypes/detection_a/detection/results/: view.py
prototypes/detection_a/detection/tools/: install-horovod.sh
prototypes/detection_b/: main.py
